# shortener_v2

./:  readme.md  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  conftest.py  main.py
app/core/: config.py  db.py  models.py
app/router/api_v1/: endpoints.py
app/shortener_url/: api.py  crud.py  dependencies.py  models.py
app/shortener_url/tests/: tests.py
app/shortener_url/tests/data/: data.json
app/shortenter_url/: api.py  crud.py  dependencies.py  models.py
app/shortenter_url/tests/: tests.py
app/shortenter_url/tests/data/: data.json
migrations/: env.py
migrations/versions/: 0001_86fd662e0337_urls.py  0001_89d72c1f9a9c_urls.py  0002_b80f0f4115bb_urls.py  0002_fa56cec33279_urls.py  0003_8938d92d2981_urls.py  2ba4f9045b91_urls.py
postgres_db/: init.sql
postgres_test_db/: init.sql
