[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
flake8 = "^5.0.4"
fastapi = "^0.85.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"
wheel = "^0.37.1"
python-dotenv = "^0.21.0"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
black = "^22.10.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
validators = "^0.20.0"


[build-system]
requires = ["poetry=1.1.13"]
build-backend = "poetry.core.masonry.api"
